--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "antd": "^4.20.4",
     "next": "12.1.6",
+    "pattern.css": "^1.0.0",
     "react": "18.1.0",
     "react-dom": "18.1.0"
   },
