--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "next": "12.1.6",
     "pattern.css": "^1.0.0",
     "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "react-dom": "18.1.0",
+    "sass": "^1.51.0"
   },
   "devDependencies": {
     "@types/node": "17.0.33",
