--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
     "embla-carousel-react": "^8.5.1",
     "lucide-react": "^0.460.0",
     "next": "15.0.3",
+    "next-mdx-remote": "^5.0.0",
     "next-themes": "^0.4.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "sugar-high": "^0.9.3",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^1.1.1"
