--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "embla-carousel-autoplay": "^8.5.1",
     "embla-carousel-react": "^8.5.1",
     "lucide-react": "^0.460.0",
-    "next": "15.0.3",
+    "next": "^14.2.29",
     "next-mdx-remote": "^5.0.0",
     "next-themes": "^0.4.3",
     "react": "18.2.0",
