--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+# stuff to NOT include
+/src/app/b/archive/page.tsx
+/public/b/archive.html
+/public/b/archive/*
+
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
