--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 /src/app/b/archive/page.tsx
 /public/b/archive.html
 /public/b/archive/*
+/src/app/b/log/posts/*.corp.mdx
 
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
