add deployment with live posting

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 /public/b/archive/*
 /public/assets/b/log/corp/*
 /posts/*.corp.mdx
+/volumes
 
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
