--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,8 @@
 /public/assets/b/log/corp/*
 /posts/*.corp.mdx
 /volumes
+/dist
+
 
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
