add RESTRICTED_MODE and functionality to show internal only or external only posts.

--- a/package.json
+++ b/package.json
@@ -6,13 +6,15 @@
   "main": "electron.js",
   "license": "UNLICENSED",
   "scripts": {
-    "dev": "next dev",
+    "dev": "RESTRICTED_MODE=false next dev",
+    "dev-internal": "RESTRICTED_MODE=true next dev",
     "build": "next build",
+    "build-internal": "RESTRICTED_MODE=true next build",
     "start": "serve static_dist",
     "start-electron": "electron-forge start",
     "lint": "next lint",
-    "package": "electron-forge package",
-    "make": "electron-forge make",
+    "package": "RESTRICTED_MODE=true electron-forge package",
+    "make": "RESTRICTED_MODE=true electron-forge make",
     "make-all": "npm run make-mac-x64 && npm run make-mac-arm && npm run make-win-x64 && npm run make-win-arm && npm run make-linux-x64 && npm run make-linux-arm",
     "make-mac-x64": "npm run make -- --arch=x64 --platform=darwin",
     "make-mac-arm": "npm run make -- --arch=arm64 --platform=darwin",
