fix docker build commands

--- a/.dockerignore
+++ b/.dockerignore
@@ -2,11 +2,8 @@
 node_modules/
 
 # remove default posts + assets
-public/assets/b/log
-posts
-
-# archive section -- please deprecate!
-public/b/archive
+# public/assets/b/log
+# posts
 
 # existing built distros
 dist/
